src/objects/BMCServiceDesk__SYSQVFormatAction__c.object
<CustomObject>
    <description>This object allows you to store data for the formatting actions of QuickViews.</description>
    <fields>
        <fullName>BMCServiceDesk__BgColor__c</fullName>
        <label>Bg Color</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Bold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Italic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Italic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SysQVFormatRule__c</fullName>
        <label>FKQVFormatRule</label>
        <referenceTo>BMCServiceDesk__SysQVFormatRule__c</referenceTo>
        <relationshipLabel>SYSQVFormatActions</relationshipLabel>
        <relationshipName>SYSQVFormatActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TextColor__c</fullName>
        <label>TextColor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__blink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blink</label>
        <type>Checkbox</type>
    </fields>
    <label>Quickview Format Action</label>
    <nameField>
        <displayFormat>FormatAction-{000}</displayFormat>
        <label>SysQVFormatAction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSQVFormatActions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>